[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
axum-extra = { version = "0.8.0", features = ["cookie"] }
chrono = { version = "0.4.31", features = ["serde"] }
jsonwebtoken = "9.1.0"
pbkdf2 = { version = "0.12.2", features = ["password-hash", "simple"] }
rand_core = { version = "0.6.4", features = ["std"] }
redis = { version = "0.23.3", features = ["tokio-comp"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.2", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
] }
time = "0.3.30"
tokio = { version = "1.33.0", features = ["full"] }
toml = "0.8.4"
tower = { version = "0.4.13", features = ["tokio"] }
tower-http = { version = "0.4.4", features = ["auth", "uuid", "limit"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.5.0", features = ["v4", "serde"] }
