[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1"
# web
axum = "0.6"
axum-extra = { version = "0.8", features = ["cookie"] }
tower = { version = "0.4", features = ["tokio"] }
tower-http = { version = "0.4", features = ["auth", "uuid", "limit"] }
# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "time",
    "local-time",
] }
# 日期处理库
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"
# serialize & deserialize
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# SQL
sea-orm = { version = "0.12", features = [
    "runtime-tokio",
    "sqlx-postgres",
    "sqlx",
] }
sqlx = { version = "0.7", features = ["runtime-tokio"] }
# 异步运行时
tokio = { version = "1", features = ["full"] }
#
toml = "0.8"
# 数据处理
jsonwebtoken = "9.1"
pbkdf2 = { version = "0.12", features = ["password-hash", "simple"] }
uuid = { version = "1.5", features = ["v4", "serde"] }
rand_core = { version = "0.6", features = ["std"] }
# 邮箱验证
# lettre = { version = "0.11.1", features = ["tokio1"] }
